<resources>
    <string name="app_name">Medich</string>

    <string name="food">FRESH FOOD</string>
    <string name="delivery">FAST DELIVERY</string>
    <string name="payment">EASY PAYMENT</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Beranda">Beranda</string>
    <string name="title_Obat">Obat</string>
    <string name="title_Donasi">Donasi</string>
    <string name="title_Dokter">Dokter</string>
    <string name="title_Personal">Personal</string>

</resources>