<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_Obat"
        android:icon="@drawable/obat_icon"
        android:title="@string/title_Obat" />

    <item
        android:id="@+id/navigation_Donasi"
        android:icon="@drawable/donasi_icon"
        android:title="@string/title_Donasi" />

    <item
        android:id="@+id/navigation_dokter"
        android:icon="@drawable/dokter_icon"
        android:title="@string/title_Dokter" />

    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/personal_icon"
        android:title="@string/title_Personal" />

</menu>