<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zainul.medichapp.mainhome.ui.home.HomeFragment"
        android:label="@string/title_Beranda"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_Obat"
        android:name="com.zainul.medichapp.mainhome.ui.obat.ObatFragment"
        android:label="@string/title_Obat"
        tools:layout="@layout/fragment_obat" />

    <fragment
        android:id="@+id/navigation_Donasi"
        android:name="com.zainul.medichapp.mainhome.ui.donasi.DonasiFragment"
        android:label="@string/title_Donasi"
        tools:layout="@layout/fragment_donasi" />

    <fragment
        android:id="@+id/navigation_dokter"
        android:name="com.zainul.medichapp.mainhome.ui.dokter.DokterFragment"
        android:label="@string/title_Dokter"
        tools:layout="@layout/fragment_dokter" />

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.zainul.medichapp.mainhome.ui.personal.PersonalFragment"
        android:label="@string/title_Personal"
        tools:layout="@layout/fragment_personal" />
</navigation>